--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.17.15",
+    "formik": "^2.4.5",
+    "next": "14.0.4",
     "react": "^18",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-loader-spinner": "^6.1.6",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.21.2",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
