--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.3.0",
     "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -32,6 +34,7 @@
     "@vitest/coverage-v8": "^1.2.1",
     "autoprefixer": "^10.0.1",
     "jsdom": "^24.0.0",
+    "next-router-mock": "^0.9.11",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
